fix console errors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,8 +153,8 @@ Not supports in Firefox and IE */
   font-weight: 900;
 }
 
-bold {
-  font-weight: 600;
+.bold {
+  font-weight: bold;
 }
 
 .noselect {
