--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 html {
-  line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -35,11 +34,7 @@ body {
   border: 0;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-  font-weight: 400;
   min-width: 320px;
   direction: ltr;
   font-feature-settings: "kern";
@@ -121,60 +116,12 @@ Not supports in Firefox and IE */
   display: none;
 }
 
-.f-reset {
-  font-size: 1rem;
-}
-.f0 {
-  font-size: 1.802032470703125em;
-}
-.f1 {
-  font-size: 1.601806640625em;
-}
-.f2 {
-  font-size: 1.423828125em;
-}
-.f3 {
-  font-size: 1.265625em;
-}
-.f4 {
-  font-size: 1.125em;
-}
-.f5 {
-  font-size: 0.8888888888888888em;
-}
-.f6 {
-  font-size: 0.7901234567901234em;
-}
-.fw1 {
-  font-weight: 100;
-}
-.fw2 {
-  font-weight: 200;
-}
-.fw3 {
-  font-weight: 300;
-}
-.fw4 {
-  font-weight: 400;
-}
-.fw5 {
-  font-weight: 500;
-}
-.fw6 {
-  font-weight: 600;
-}
-.fw7 {
-  font-weight: 700;
-}
-.fw8 {
-  font-weight: 800;
-}
-.fw9 {
-  font-weight: 900;
-}
-
 .bold {
   font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .noselect {
