--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 
 @layer base {
   @font-face {
-    font-family: "-apple-system BlinkMacSystemFont Segoe UI Roboto Oxygen Ubuntu Cantarell Fira Sans Droid Sans Helvetica Neue sans-serif";
+    font-family: "system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji";
   }
   h1 {
     @apply text-3xl;
@@ -127,4 +127,8 @@ Not supports in Firefox and IE */
 
 .md-remark > .gatsby-highlight > pre {
   white-space: pre-wrap;
+}
+
+.text-secondary-color {
+  color: var(--secondary-color);
 }
