--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,7 +106,7 @@ Not supports in Firefox and IE */
                                   supported by Chrome and Opera */
 }
 
-.md-remark > p {
+.md-remark > * {
   margin-bottom: 2rem;
 }
 
@@ -122,7 +122,19 @@ Not supports in Firefox and IE */
 
 .md-remark > .gatsby-highlight {
   margin-bottom: 2rem;
+}
+
+.md-remark > .gatsby-highlight,
+code {
   background-color: rgba(242, 242, 242, 1);
+}
+
+.md-remark code {
+  padding: 2px 4px;
+}
+
+.md-remark > * > pre {
+  padding: 20px;
 }
 
 .md-remark > .gatsby-highlight > pre {
